--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,9 @@ ul {
 
 img, svg {
   display: block;
-  max-width: 100%;
-  height: auto; }
+  width: auto;
+  max-height: 100%; 
+}
 
 /* Form */
 input, textarea, button, select {
