--- a/css/style.css
+++ b/css/style.css
@@ -1480,19 +1480,19 @@ background-position: 98px;
 
   }
 
-  .text_why_us {
+  .text_why_us {}
 /* ======= */
 @media (max-width: 1199px){
 /* menu */
 /* menu */
 /* menu */
 /* menu */
-    .header__logo{
+  .header__logo{
         margin-left: 30px;
         margin-top: 5px;
         margin-right: 567px;
         z-index: 12;
-      }
+    }
       .header_burger {
         display: block;
         position: relative;
