--- a/css/main.css
+++ b/css/main.css
@@ -2,98 +2,81 @@
 * {
   padding: 0px;
   margin: 0px;
-  border: none;
-}
+  border: none; }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 :focus,
 :active {
-  outline: none;
-}
+  outline: none; }
 
 /* Links */
 a, a:visited {
   color: inherit;
   text-decoration: none;
-  display: inline-block;
-}
+  display: inline-block; }
 
 a:hover {
   color: inherit;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 a:focus,
 a:active {
-  outline: none;
-}
+  outline: none; }
 
 /* Common */
 aside, nav, footer, header, section, main {
-  display: block;
-}
+  display: block; }
 
 h1, h2, h3, h4, h5, h6, p {
   font-size: inherit;
-  font-weight: inherit;
-}
+  font-weight: inherit; }
 
 ul {
-  list-style: none;
-}
+  list-style: none; }
 
 img, svg {
   display: block;
   width: auto;
-  max-height: 100%;
+  max-height: 100%; 
 }
 
 /* Form */
 input, textarea, button, select {
   font-family: inherit;
-  font-size: inherit;
-}
+  font-size: inherit; }
 
 input::-ms-clear {
-  display: none;
-}
+  display: none; }
 
 button, input[type="submit"] {
   display: inline-block;
   box-shadow: none;
   background-color: transparent;
   background: none;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 input:focus, input:active,
 button:focus, button:active {
-  outline: none;
-}
+  outline: none; }
 
 button::-moz-focus-inner {
   padding: 0;
-  border: 0;
-}
+  border: 0; }
 
 label {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 legend {
-  display: block;
-}
+  display: block; }
 
 html {
   min-height: 100vh;
   /* sticky footer */
-  scroll-behavior: smooth;
-}
+  scroll-behavior: smooth; }
 
 body {
   min-height: 100vh;
@@ -111,23 +94,19 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  background-color: #000;
-}
+  background-color: #000; }
 
-body>* {
+body > * {
   flex-shrink: 0;
-  /* sticky footer */
-}
+  /* sticky footer */ }
 
 section {
-  position: relative;
-}
+  position: relative; }
 
 /* Grid styles */
 .container-fluid {
   max-width: 1920px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 .container {
   max-width: 1610px;
@@ -137,39 +116,24 @@ section {
   padding-right: 15px;
   /* Tablet */
   /* Mobile */
-  /* Mobile XS */
-}
-
-.container--fluid {
-  max-width: unset;
-}
-
-.container--no-padding {
-  padding: 0;
-}
-
-@media (max-width: 1199px) {
-  .container {
-    width: 900px;
-  }
-}
-
-@media (max-width: 899px) {
-  .container {
-    width: 600px;
-  }
-}
-
-@media (max-width: 599px) {
-  .container {
-    width: 320px;
-  }
-}
+  /* Mobile XS */ }
+  .container--fluid {
+    max-width: unset; }
+  .container--no-padding {
+    padding: 0; }
+  @media (max-width: 1199px) {
+    .container {
+      width: 900px; } }
+  @media (max-width: 899px) {
+    .container {
+      width: 600px; } }
+  @media (max-width: 599px) {
+    .container {
+      width: 320px; } }
 
 /* Utility */
 .none {
-  display: none !important;
-}
+  display: none !important; }
 
 .visually-hidden {
   opacity: 0;
@@ -179,14 +143,12 @@ section {
   display: block;
   margin-left: -10000px;
   background: transparent;
-  font-size: 0;
-}
+  font-size: 0; }
 
 /* Sticky Footer */
 .footer {
   margin-top: auto;
-  /* sticky footer */
-}
+  /* sticky footer */ }
 
 .h2 {
   color: #000;
@@ -196,44 +158,30 @@ section {
   font-size: 100px;
   font-weight: 400;
   line-height: 1.25;
-  text-transform: uppercase;
-}
-
-@media (max-width: 1199.98px) {
-  .h2 {
-    font-size: 80px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .h2 {
-    font-size: 60px;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .h2 {
-    font-size: 35px;
-  }
-}
+  text-transform: uppercase; }
+  @media (max-width: 1199.98px) {
+    .h2 {
+      font-size: 80px; } }
+  @media (max-width: 767.98px) {
+    .h2 {
+      font-size: 60px; } }
+  @media (max-width: 575.98px) {
+    .h2 {
+      font-size: 35px; } }
 
 .section__title {
   text-align: center;
-  margin-bottom: 64px;
-}
+  margin-bottom: 64px; }
 
 .subscribe_two {
   padding-top: 24px;
-  padding-bottom: 48px;
-}
+  padding-bottom: 48px; }
 
 .subscribe__wrapper {
-  text-align: center;
-}
+  text-align: center; }
 
 .section__title {
-  margin-bottom: 29px;
-}
+  margin-bottom: 29px; }
 
 .subscribe__message {
   color: #FFF;
@@ -242,34 +190,27 @@ section {
   font-weight: 400;
   line-height: 1.25;
   text-transform: uppercase;
-  margin-bottom: 75px;
-}
+  margin-bottom: 75px; }
 
 .subscribe__block .input {
-  margin-right: 8px;
-}
-
+  margin-right: 8px; }
 .subscribe__block .button {
-  width: 222px;
-}
+  width: 222px; }
 
 .footer__top {
   padding: 33px 0;
-  background-color: #233133;
-}
+  background-color: #233133; }
 
 .footer__copyright {
   margin: 0 auto;
   padding: 16px 0;
-  background-color: #000;
-}
+  background-color: #000; }
 
 .footer__copyright p {
   text-align: center;
   color: #FFFF;
   font-weight: 400;
-  line-height: 1.25;
-}
+  line-height: 1.25; }
 
 input {
   width: 715px;
@@ -281,8 +222,7 @@ input {
   color: rgba(255, 255, 255, 0.25);
   font-size: 25px;
   font-weight: 400;
-  line-height: 1.81;
-}
+  line-height: 1.81; }
 
 .button {
   min-width: 200px;
@@ -294,100 +234,67 @@ input {
   color: #FFF;
   font-size: 25px;
   font-weight: 400;
-  line-height: 1.81;
-}
-
-@media (max-width: 1399.98px) {
-  .button {
-    padding: 10px 20px;
-  }
-}
-
-@media (max-width: 991.98px) {
-  .button {
-    min-width: 170px;
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .button {
-    font-size: 14px;
-    min-width: 130px;
-    padding: 8px 15px;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .button {
-    padding: 5px 15px;
-  }
-}
+  line-height: 1.81; }
+  @media (max-width: 1399.98px) {
+    .button {
+      padding: 10px 20px; } }
+  @media (max-width: 991.98px) {
+    .button {
+      min-width: 170px;
+      font-size: 18px; } }
+  @media (max-width: 767.98px) {
+    .button {
+      font-size: 14px;
+      min-width: 130px;
+      padding: 8px 15px; } }
+  @media (max-width: 575.98px) {
+    .button {
+      padding: 5px 15px; } }
 
 .button-gray {
   background-color: #233133;
   border: none;
   font-weight: 500;
-  line-height: 1.735;
-}
+  line-height: 1.735; }
 
 .courses__title {
   text-align: center;
-  margin-bottom: 64px;
-}
-
-@media (max-width: 1199.98px) {
-  .courses__title {
-    margin-bottom: 50px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .courses__title {
-    margin-bottom: 30px;
-  }
-}
+  margin-bottom: 64px; }
+  @media (max-width: 1199.98px) {
+    .courses__title {
+      margin-bottom: 50px; } }
+  @media (max-width: 767.98px) {
+    .courses__title {
+      margin-bottom: 30px; } }
 
 .slider {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-}
+  align-items: center; }
 
 .slider__wrapper {
   position: relative;
   width: 100%;
   aspect-ratio: 2.3/1;
   margin-bottom: 10px;
-  overflow: hidden;
-}
-
-@media (max-width: 575.98px) {
-  .slider__wrapper {
-    width: 100%;
-  }
-}
+  overflow: hidden; }
+  @media (max-width: 575.98px) {
+    .slider__wrapper {
+      width: 100%; } }
 
 .slide {
   position: absolute;
   text-align: center;
   transition: all 0.3s;
   width: 70%;
-  border-radius: 8px;
-}
-
-@media (max-width: 767.98px) {
-  .slide {
-    width: 85%;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .slide {
-    width: 100%;
-  }
-}
+  border-radius: 8px; }
+  @media (max-width: 767.98px) {
+    .slide {
+      width: 85%; } }
+  @media (max-width: 575.98px) {
+    .slide {
+      width: 100%; } }
 
 .slide img {
   width: 100%;
@@ -397,128 +304,81 @@ input {
   z-index: -2;
   -webkit-mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
   mask-image: linear-gradient(to top, transparent 10%, black 87.86%);
-  border-radius: inherit;
-}
+  border-radius: inherit; }
 
 .play-button {
   margin-top: -38%;
   margin-bottom: 35px;
   display: flex;
-  justify-content: center;
-}
-
-@media (max-width: 1199.98px) {
-  .play-button {
-    height: 80px;
-    margin-bottom: 35px;
-  }
-}
-
-@media (max-width: 991.98px) {
-  .play-button {
-    height: 50px;
-    margin-bottom: 10px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .play-button {
-    height: 40px;
-    margin-top: -40%;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .play-button {
-    height: 35px;
-    margin-bottom: 5px;
-  }
-}
+  justify-content: center; }
+  @media (max-width: 1199.98px) {
+    .play-button {
+      height: 80px;
+      margin-bottom: 35px; } }
+  @media (max-width: 991.98px) {
+    .play-button {
+      height: 50px;
+      margin-bottom: 10px; } }
+  @media (max-width: 767.98px) {
+    .play-button {
+      height: 40px;
+      margin-top: -40%; } }
+  @media (max-width: 575.98px) {
+    .play-button {
+      height: 35px;
+      margin-bottom: 5px; } }
 
 .slider__content-text {
   font-size: 30px;
   font-weight: 500;
   line-height: 1.25;
   color: #48B84A;
-  margin-bottom: 10px;
-}
-
-@media (max-width: 1199.98px) {
-  .slider__content-text {
-    margin-bottom: 14px;
-  }
-}
-
-@media (max-width: 991.98px) {
-  .slider__content-text {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .slider__content-text {
-    font-size: 14px;
-    margin-bottom: 5px;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .slider__content-text {
-    font-size: 10px;
-  }
-}
+  margin-bottom: 10px; }
+  @media (max-width: 1199.98px) {
+    .slider__content-text {
+      margin-bottom: 14px; } }
+  @media (max-width: 991.98px) {
+    .slider__content-text {
+      font-size: 18px;
+      margin-bottom: 10px; } }
+  @media (max-width: 767.98px) {
+    .slider__content-text {
+      font-size: 14px;
+      margin-bottom: 5px; } }
+  @media (max-width: 575.98px) {
+    .slider__content-text {
+      font-size: 10px; } }
 
 .slider__content-author {
   font-size: 30px;
   font-weight: 500;
   line-height: 1.25;
   color: #FFFF;
-  margin-bottom: 30px;
-}
-
-@media (max-width: 1199.98px) {
-  .slider__content-author {
-    margin-bottom: 26px;
-  }
-}
-
-@media (max-width: 991.98px) {
-  .slider__content-author {
-    font-size: 24px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .slider__content-author {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .slider__content-author {
-    font-size: 14px;
-  }
-}
+  margin-bottom: 30px; }
+  @media (max-width: 1199.98px) {
+    .slider__content-author {
+      margin-bottom: 26px; } }
+  @media (max-width: 991.98px) {
+    .slider__content-author {
+      font-size: 24px; } }
+  @media (max-width: 767.98px) {
+    .slider__content-author {
+      font-size: 18px;
+      margin-bottom: 10px; } }
+  @media (max-width: 575.98px) {
+    .slider__content-author {
+      font-size: 14px; } }
 
 .slider__buttons-row {
   display: flex;
   column-gap: 25px;
-  justify-content: center;
-}
-
-@media (max-width: 767.98px) {
-  .slider__buttons-row {
-    gap: 10px;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .slider__buttons-row {
-    display: none;
-  }
-}
+  justify-content: center; }
+  @media (max-width: 767.98px) {
+    .slider__buttons-row {
+      gap: 10px; } }
+  @media (max-width: 575.98px) {
+    .slider__buttons-row {
+      display: none; } }
 
 .lable::after {
   position: absolute;
@@ -534,129 +394,87 @@ input {
   writing-mode: vertical-rl;
   padding: 24px 10px 24px 0;
   border-radius: 0 28px 28px 0;
-  background-color: #48B84A;
-}
-
-@media (max-width: 1199.98px) {
-  .lable::after {
-    font-size: 30px;
-    right: -47.1px;
-  }
-}
-
-@media (max-width: 991.98px) {
-  .lable::after {
-    font-size: 20px;
-    right: -35px;
-    border-radius: 0 20px 20px 0;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .lable::after {
-    font-size: 16px;
-    right: -30px;
-    border-radius: 0 16px 16px 0;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .lable::after {
-    font-size: 12px;
-    right: -21.0px;
-    padding: 10px 6px 10px 0;
-    border-radius: 0 10px 10px 0;
-  }
-}
+  background-color: #48B84A; }
+  @media (max-width: 1199.98px) {
+    .lable::after {
+      font-size: 30px;
+      right: -47.1px; } }
+  @media (max-width: 991.98px) {
+    .lable::after {
+      font-size: 20px;
+      right: -35px;
+      border-radius: 0 20px 20px 0; } }
+  @media (max-width: 767.98px) {
+    .lable::after {
+      font-size: 16px;
+      right: -30px;
+      border-radius: 0 16px 16px 0; } }
+  @media (max-width: 575.98px) {
+    .lable::after {
+      font-size: 12px;
+      right: -21.0px;
+      padding: 10px 6px 10px 0;
+      border-radius: 0 10px 10px 0; } }
 
 .slider__btn {
   margin-top: auto;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-
-@media (max-width: 991.98px) {
-  .slider__btn {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .slider__btn {
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 575.98px) {
-  .slider__btn {
-    font-size: 14px;
-  }
-}
+  align-items: center; }
+  @media (max-width: 991.98px) {
+    .slider__btn {
+      font-size: 16px; } }
+  @media (max-width: 767.98px) {
+    .slider__btn {
+      font-size: 14px; } }
+  @media (max-width: 575.98px) {
+    .slider__btn {
+      font-size: 14px; } }
 
 .slider__btn-prev,
 .slider__btn-next {
-  cursor: pointer;
-}
-
-@media (max-width: 991.98px) {
-
-  .slider__btn-prev,
-  .slider__btn-next {
-    width: 24px;
-  }
-}
-
-@media (max-width: 767.98px) {
-
-  .slider__btn-prev,
-  .slider__btn-next {
-    width: 28px;
-  }
-}
-
-@media (max-width: 575.98px) {
-
-  .slider__btn-prev,
-  .slider__btn-next {
-    width: 24px;
-  }
-}
+  cursor: pointer; }
+  @media (max-width: 991.98px) {
+    .slider__btn-prev,
+    .slider__btn-next {
+      width: 24px; } }
+  @media (max-width: 767.98px) {
+    .slider__btn-prev,
+    .slider__btn-next {
+      width: 28px; } }
+  @media (max-width: 575.98px) {
+    .slider__btn-prev,
+    .slider__btn-next {
+      width: 24px; } }
 
 .slider-pagination {
-  color: #626262;
-}
+  color: #626262; }
 
 .social-list {
   display: flex;
   align-items: center;
   justify-content: center;
   column-gap: 44px;
-  margin-bottom: 35px;
-}
+  margin-bottom: 35px; }
 
 .social-list a {
   display: inline-flex;
   align-items: center;
-  flex-shrink: 0;
-}
+  flex-shrink: 0; }
 
 .svg-size {
   height: 69px;
-  width: 69px;
-}
+  width: 69px; }
 
 .navbar__list {
   display: flex;
   justify-content: center;
-  gap: 100px;
-}
+  gap: 100px; }
 
 .navbar__list-item {
   color: #FFFF;
   font-family: 'Mulish', sans-serif;
   font-size: 20px;
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 /*# sourceMappingURL=main.css.map */
