--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,12 @@
   box-sizing: border-box;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
+html{
+  overflow-x: hidden;
+}
 body {
   background-color: bisque;
+  overflow-x: hidden;
 }
 
 /* menu */
